# weather

./: .gitignore  Cargo.toml  README.md  forecast_output.csv  math.qpr  quantum.qpr  script.qpr  script.wthr  script.wthr.f90
.github/workflows/: main.yml
docs/: constants.md  functions.md  hello-world.md
examples/: quantum.qpr
examples/import/: script.qpr
src/: ast.rs  configs.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs
src/constants/: mod.rs  weatherconstants.rs
vscode-extension/qprime-language/: README.md  package.json
vscode-extension/qprime-language/syntaxes/: qprime.tmLanguage.json
vscode-extension/weather-language/: README.md  package.json
vscode-extension/weather-language/syntaxes/: weather.tmLanguage.json
