[package]
name = "wthr-lang"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "An experimental programming language for weather calculations/applications."
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
repository = "https://github.com/zanderlewis/weather"
readme = "README.md"
keywords = ["weather", "language", "experimental"]

[dependencies]
num-bigint = "^0.4.6"
num-traits = "^0.2.19"
num-rational = "^0.4.0"
rayon = "^1.5.1"

[profile.dev]
opt-level = 3
